Overflow scrollbar fix

--- a/app/assets/stylesheets/blah/_fixes.css.scss
+++ b/app/assets/stylesheets/blah/_fixes.css.scss
@@ -14,5 +14,5 @@
 /* control height of modal popups which can get very large */
 .modal-body {
     max-height: 568px;
-    overflow: scroll;
+    overflow-y: auto;
 }
